--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -484,7 +484,7 @@
                 </div>
                 <div class="team-card-content">
                     <p class="text-blk name">
-                        Shashank Upadhayay
+                        Shashank Upadhyay
                     </p>
                     <p class="text-blk position">
                         Core Technical Team
@@ -492,9 +492,6 @@
                 </div>
             </div>
         </div>
-
-
-
     </div>
 </div>
 
