added the pod section in instructor side

--- a/templates/instructor/base.html
+++ b/templates/instructor/base.html
@@ -204,6 +204,16 @@
 
 
                         <li class="sidebar-item">
+                            <a class="sidebar-link {% block batch_active %} {% endblock %}"
+                                href="{% url 'instructor_batches' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-server"></i>
+                                </span>
+                                <span class="hide-menu">Courses</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
                             <a class="sidebar-link {% block sheet_active %} {% endblock %}"
                                 href="{% url 'instructor_sheets' %}" aria-expanded="false">
                                 <span>
