--- a/templates/administration/practice/test_cases.html
+++ b/templates/administration/practice/test_cases.html
@@ -33,9 +33,14 @@ active
 
         <div class="row">
 
-            <button type="button" class="btn btn-outline-primary button mt-n3 m-3 col-8" data-bs-toggle="modal"
+            <button type="button" class="btn btn-outline-primary button mt-n3 m-3 col-4" data-bs-toggle="modal"
                 data-bs-target="#addTestCaseModal">
                 Add Test Case
+            </button>
+
+            <button type="button" class="btn btn-outline-warning button mt-n3 m-3 col-3" data-bs-toggle="modal"
+                data-bs-target="#addTestCaseUsingJsonModal">
+                Add Test Case using JSON
             </button>
 
             <a href="{% url 'driver_code' question.slug %}" class="btn btn-outline-warning button mt-n3 m-3 col-3">
@@ -244,6 +249,38 @@ active
     {% endautoescape %}
 
 
+    {% autoescape off %}
+    <!-- Add Test Case Modal  using JSON-->
+    <div class="modal fade" id="addTestCaseUsingJsonModal" tabindex="-1" aria-labelledby="addTestCaseUsingJsonModal"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addTestCaseModalLabel">Add Test Case</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="addTestCaseUsingJsonForm" method="POST">
+                    {% csrf_token %}
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="inputData" class="form-label">Input Data</label>
+                            <div class="star">*</div>
+                            <textarea class="form-control" id="inputData" placeholder="Enter the Input JSON here..."
+                                name="json_data" rows="15" required></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Add Test Cases</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    {% endautoescape %}
+
+
 </div>
 
 <script>
@@ -290,6 +327,40 @@ active
                     // Reset the form
                     form.reset();
                 } else {
+                    alert(data.message);
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An error occurred. Please try again.');
+            });
+    });
+
+    document.getElementById('addTestCaseUsingJsonForm').addEventListener('submit', function (event) {
+        event.preventDefault();
+
+        const form = event.target;
+        const formData = new FormData(form);
+        const questionSlug = "{{ question.slug }}";
+        const modal = bootstrap.Modal.getInstance(document.getElementById('addTestCaseUsingJsonModal'));
+
+        fetch("{% url 'add_test_cases_using_json_case' question.slug %}", {
+            method: 'POST',
+            headers: {
+                'X-Requested-With': 'XMLHttpRequest'
+            },
+            body: formData
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.status === 'success') {
+                    alert(data.message);
+                    // Reset the form
+                    form.reset();
+                    modal.hide()
+                    window.location.reload();
+                } else {
+                    modal.hide()
                     alert(data.message);
                 }
             })
