--- a/templates/student/batch/my_batches.html
+++ b/templates/student/batch/my_batches.html
@@ -23,7 +23,7 @@ Dashboard | My Courses
 
     {% endfor %}
 
-    
+
     <div class="card">
         {% if student_batches %}
         <div class="card-body">
@@ -74,7 +74,7 @@ Dashboard | My Courses
 
     <div class="card">
 
-        {% if all_batches %}
+        {% if pending_batches or other_batches %}
 
         <div class="card-body">
             <h3 class="heading">
@@ -92,26 +92,30 @@ Dashboard | My Courses
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
 
-        {% for batch in all_batches %}
+        {% for batch in pending_batches %}
 
         <div class="col-md-3">
-            <h5 class="card-title fw-semibold mb-0"></h5>
+            <div class="card">
+
+                <img src="{{ batch.thumbnail.url }}" class="card-img-top" alt="Batch Thumbnail" />
+                <div class="card-body">
+                    <h5 class="card-title">{{ batch.name }}🔥</h5>
+                    <button class="btn btn-outline-warning w-100" disabled>Pending</button>
+                </div>
+            </div>
+        </div>
+
+        {% endfor %}
+
+        {% for batch in other_batches %}
+
+        <div class="col-md-3">
             <div class="card">
                 <a href="#">
-                    <img src="{{ batch.thumbnail.url }}" class="card-img-top" alt="Sheet Thumbnail" />
+                    <img src="{{ batch.thumbnail.url }}" class="card-img-top" alt="Batch Thumbnail" />
                     <div class="card-body">
-                        <h5 class="card-title">
-                            {{ batch.name }}🔥
-                        </h5>
-                        <!-- <p class="card-text mb-2">
-                            Total Sawal : {{ sheet.get_total_questions }}
-                        </p> -->
-                        <!-- <p class="card-text text-black mb-1">
-                            Total Registrations: {{ company.job_set.all }}
-                        </p> -->
-
+                        <h5 class="card-title">{{ batch.name }}🔥</h5>
                         <a href="{% url 'enroll_batch' batch.id %}" class="btn btn-success w-100">Enroll Now</a>
-                       
                     </div>
                 </a>
             </div>
@@ -120,6 +124,7 @@ Dashboard | My Courses
         {% endfor %}
 
     </div>
+
 
 </div>
 
