solved the 'could not load problem' issue on student side

--- a/templates/student/batch/my_batches.html
+++ b/templates/student/batch/my_batches.html
@@ -74,7 +74,7 @@ Dashboard | My Courses
 
     <div class="card">
 
-        {% if pending_batches or other_batches %}
+        {% if  all_batches %}
 
         <div class="card-body">
             <h3 class="heading">
@@ -92,22 +92,8 @@ Dashboard | My Courses
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
 
-        {% for batch in pending_batches %}
 
-        <div class="col-md-3">
-            <div class="card">
-
-                <img src="{{ batch.thumbnail.url }}" class="card-img-top" alt="Batch Thumbnail" />
-                <div class="card-body">
-                    <h5 class="card-title">{{ batch.name }}🔥</h5>
-                    <button class="btn btn-outline-warning w-100" disabled>Pending</button>
-                </div>
-            </div>
-        </div>
-
-        {% endfor %}
-
-        {% for batch in other_batches %}
+        {% for batch in all_batches %}
 
         <div class="col-md-3">
             <div class="card">
@@ -115,7 +101,12 @@ Dashboard | My Courses
                     <img src="{{ batch.thumbnail.url }}" class="card-img-top" alt="Batch Thumbnail" />
                     <div class="card-body">
                         <h5 class="card-title">{{ batch.name }}🔥</h5>
+
+                        {% if batch.is_enrolled %}
+                        <button class="btn btn-outline-success w-100" disabled>{{ batch.enrollment_status }}</button>
+                        {% else %}
                         <a href="{% url 'enroll_batch' batch.id %}" class="btn btn-success w-100">Enroll Now</a>
+                        {% endif %}
                     </div>
                 </a>
             </div>
