added the bacl button for set pod on instructor side

--- a/templates/instructor/batch/set_pod.html
+++ b/templates/instructor/batch/set_pod.html
@@ -53,8 +53,8 @@ active
                             </div>
                             <button type="submit" class="btn btn-primary w-100">Set POD</button>
                         </form>
-                        <a href="{% url 'administrator_batch' batch.slug %}" class="btn btn-secondary mt-3">Back to
-                            Batches</a>
+                        <button onclick="history.back();" class="btn btn-secondary mt-3">Back to
+                            Batches</button>
                     </div>
                 </div>
             </div>
