added the sheet system on nstructor side as well

--- a/templates/instructor/sheet/sheets.html
+++ b/templates/instructor/sheet/sheets.html
@@ -178,7 +178,7 @@ Instructor | Sheets
                                     </span>
 
                                     <!-- View More Button -->
-                                    <a href="/administration/sheet/${sheet.slug}/" class="btn btn-outline-secondary w-100 mt-2">View More</a>
+                                    <a href="/instructor/sheet/${sheet.slug}/" class="btn btn-outline-secondary w-100 mt-2">View More</a>
                                 </div>
                             </div>
                         </div>
