fixed sheet system for batches on instructor side

--- a/templates/instructor/batch/batch.html
+++ b/templates/instructor/batch/batch.html
@@ -126,7 +126,7 @@ active
                                             {% else %}
                                             <span class="text-danger">Disabled</span>
                                             {% endif %}
-                                            <a href="{% url 'administrator_sheet' sheet.slug %}"
+                                            <a href="{% url 'instructor_sheet' sheet.slug %}"
                                                 class="btn btn-outline-secondary w-100">View More</a>
                                         </div>
                                     </a>
