added the view submission for instructor as well

--- a/templates/instructor/batch/view_submissions.html
+++ b/templates/instructor/batch/view_submissions.html
@@ -1,13 +1,13 @@
-{% extends "administration/base.html" %}
+{% extends "instructor/base.html" %}
 {% load static %}
 {% load custom_filters %}
 
 
 {% block title %}
-Submissions: {{ question.title }}
+Submissions | {{ question.title }}
 {% endblock %}
 
-{% block pp_active %}
+{% block sheet_active %}
 active
 {% endblock %}
 
