--- a/templates/instructor/sheet/sheet.html
+++ b/templates/instructor/sheet/sheet.html
@@ -218,7 +218,7 @@ active
 
                             <td class="border-bottom-0">
                                 <div class="d-flex align-items-center gap-2">
-                                    <a href="#"
+                                    <a href="{% url 'instructor_view_submissions' question.slug %}"
                                         class="btn btn-outline-info text-blue float-end">Submissions
                                         ({{question.how_many_users_solved }}) </a>
                                 </div>
