fixed the url of sheets

--- a/templates/administration/sheet/sheets.html
+++ b/templates/administration/sheet/sheets.html
@@ -96,7 +96,7 @@ Administration | Sheets
                         <div class="col-md-3">
                             <div class="card">
                                 <!-- Thumbnail with lazy loading -->
-                                <a href="/administrator/sheet/${sheet.id}/">
+                                <a href="/administration/sheet/${sheet.slug}/">
                                     <img 
                                         src="/static/placeholder-thumbnail.jpg" 
                                         data-src="${sheet.thumbnail || '/static/default-thumbnail.jpg'}" 
