--- a/templates/instructor/sheet/sheets.html
+++ b/templates/instructor/sheet/sheets.html
@@ -150,7 +150,7 @@ Instructor | Sheets
                         <div class="col-md-3">
                             <div class="card">
                                 <!-- Thumbnail with lazy loading -->
-                                <a href="/administrator/sheet/${sheet.id}/">
+                                <a href="/instructor/sheet/${sheet.slug}/">
                                     <img 
                                         src="/static/placeholder-thumbnail.jpg" 
                                         data-src="${sheet.thumbnail || '/static/default-thumbnail.jpg'}" 
